--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-config-next": "13.4.19",
     "history": "^5.3.0",
     "next": "13.4.19",
+    "nodemailer": "^6.9.4",
     "octokit": "^3.1.0",
     "postcss": "8.4.29",
     "react": "18.2.0",
@@ -28,6 +29,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.9"
+    "@tailwindcss/typography": "^0.5.9",
+    "@types/nodemailer": "^6.4.9"
   }
 }
