--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@vercel/analytics": "^1.0.2",
     "autoprefixer": "10.4.15",
     "daisyui": "^3.6.4",
     "eslint": "8.48.0",
